--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
   );
 }
 
+button {
+  cursor: pointer;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
